--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -31,6 +31,10 @@
 		li {
 			font-size: 1.2rem;
 			margin: 1rem 0;
+
+			.note {
+				font-size: 1rem;
+			}
 		}
 
 		.bar-container {
@@ -89,6 +93,11 @@
 
 		#noise-standards {
 			margin: 3rem auto;
+		}
+
+		.source-container {
+			display: flex;
+			justify-content: flex-end;
 		}
 	}
 
