--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,10 @@
   margin: 1rem 0;
 }
 
+#details #stats li .note {
+  font-size: 1rem;
+}
+
 #details #stats .bar-container {
   width: 100%;
   padding: 0;
@@ -290,6 +294,15 @@
 
 #details #stats-details #noise-standards {
   margin: 3rem auto;
+}
+
+#details #stats-details .source-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 #details #link-container a {
